--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
 spring.application.name=secure-sql-oracle-mock
+
+# ===============================
+# DataSource (H2 - Oracle Mode)
+# ===============================
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=Oracle;DATABASE_TO_UPPER=false
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# ===============================
+# H2 Console (선택)
+# ===============================
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# ===============================
+# MyBatis
+# ===============================
+#mybatis.mapper-locations=classpath:/mapper/**/*.xml
+mybatis.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# ===============================
+# SQL 초기화 (schema.sql, data.sql 사용 시)
+# ===============================
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+
+
+spring.jpa.defer-datasource-initialization=true
+
