--- a/src/main/resources/TableWhitelist.properties
+++ b/src/main/resources/TableWhitelist.properties
@@ -28,7 +28,7 @@ COLUMNS=CUSTOMER_ID,LOG_DATE,USER_ID
 
 # === SALES_REPS ===
 TABLE=SALES_REPS
-COLUMNS=REP_ID,REP_NAME,REGION_ID,TEAM_ID,QUOTA_ATTAINMENT
+COLUMNS=REP_ID,REP_NAME,REGION_ID,TEAM_ID,QUOTA_ATTAINMENT,JOB_TITLE,HIRE_DATE
 
 # === REGIONS ===
 TABLE=REGIONS
@@ -40,7 +40,7 @@ COLUMNS=CUSTOMER_ID,NEGATIVE_TREND_MONTHS,MAX_DROP_RATE
 
 # === CUSTOMERFINANCIALS (CTE) ===
 TABLE=CUSTOMERFINANCIALS
-COLUMNS=CUSTOMER_ID,COMPANY_NAME,SALES_REP_ID,TOTAL_LTV,OVERDUE_COUNT,AVG_PAYMENT_DELAY_DAYS,REVENUE_TIER
+COLUMNS=CUSTOMER_ID,COMPANY_NAME,SALES_REP_ID,TOTAL_LTV,OVERDUE_COUNT,AVG_PAYMENT_DELAY_DAYS,REVENUE_TIER,INDUSTRY_TYPE,MONTHLY_SUBSCRIPTION
 
 # === MONTHLYUSAGESTATS (CTE) ===
 TABLE=MONTHLYUSAGESTATS
