validator  사용 예제 추가, tablewhitelistValidator.java 수정

--- a/src/main/resources/TableWhitelist.properties
+++ b/src/main/resources/TableWhitelist.properties
@@ -45,3 +45,17 @@ COLUMNS=CUSTOMER_ID,COMPANY_NAME,SALES_REP_ID,TOTAL_LTV,OVERDUE_COUNT,AVG_PAYMEN
 # === MONTHLYUSAGESTATS (CTE) ===
 TABLE=MONTHLYUSAGESTATS
 COLUMNS=CUSTOMER_ID,USAGE_MONTH,MONTHLY_ACTIVE_USERS,PREV_MONTH_USERS,GROWTH_RATE
+
+#=============================================================
+
+TABLE=ENTERPRISES
+COLUMNS=ENTERPRISE_ID,ENTERPRISE_NAME,INDUSTRY_CODE,REGION_CODE
+
+TABLE=SUBSCRIPTIONS
+COLUMNS=SUBSCRIPTION_ID,ENTERPRISE_ID,START_DATE,STATUS
+
+TABLE=INVOICES
+COLUMNS=INVOICE_ID,SUBSCRIPTION_ID,BILLING_MONTH,AMOUNT,PAID_YN
+
+TABLE=USAGE_LOGS
+COLUMNS=LOG_ID,SUBSCRIPTION_ID,USAGE_DATE,ACTIVE_USERS,API_CALLS
